conditions.Conditions.scala.error
Erreur de compilation :
Conditions:2: error: '(' expected but identifier found.
if estFaceMur   {recule(1:Int)}
   ^Conditions:5: error: illegal start of simple expression
	}
        ^